--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
     <title>Playstation</title>
     <meta
       name="description"
-      content="Responsive Website PlayStation by Kennedy B."
+      content="Responsive Website PlayStation by UPES."
     />
-    <meta name="author" content="Kennedy Barros" />
+    <meta name="author" content="UPES" />
 
     <!--========== Open Graph / Facebook ===========-->
     <meta
       property="og:url"
-      content="https://repsonsive-website-playstation.netlify.app/"
+      content="https://majorr2.vercel.app/"
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Responsive Website PlayStation" />
     <meta
       property="og:description"
-      content="Responsive Website PlayStation by Kennedy B."
+      content="Responsive Website PlayStation by UPES."
     />
     <meta property="og:image" content="https://i.ibb.co/qCvjdFd/cover.png" />
 
     <!--========== CANONICAL ===========-->
     <meta
       property="canonical"
-      content="https://repsonsive-website-playstation.netlify.app/"
+      content="https://majorr2.vercel.app/"
     />
     <meta property="keywords" content="responsive, website, playstation" />
     <meta property="robots" content="responsive, website, playstation" />
@@ -47,7 +47,7 @@
     <meta name="twitter:title" content="Responsive Website PlayStation" />
     <meta
       name="twitter:description"
-      content="Responsive Website PlayStation by Kennedy B."
+      content="Responsive Website PlayStation by UPES."
     />
     <meta name="twitter:image" content="https://i.ibb.co/qCvjdFd/cover.png" />
 
